--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,7 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+  
+# GitHub
+- skill: GitHub
+  description: Managing Conflicts on GitHub
