--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Master in Computer Science  
+  uni: University of Alberta
+  year: June, 2016
   # awards:
-  # summary:
+  summary: Course based M.Sc. with focus on Machine Learning and Computer Vision applicaions for Medical Imaging
